--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@nuxt/postcss8": "^1.1.3",
     "@nuxtjs/eslint-config-typescript": "^10.0.0",
     "@nuxtjs/eslint-module": "^3.1.0",
+    "@nuxtjs/tailwindcss": "^5.1.2",
     "autoprefixer": "^10.4.7",
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
@@ -18,7 +19,6 @@
     "nuxt": "3.0.0-rc.3",
     "postcss": "^8.4.14",
     "prettier": "^2.6.2",
-    "tailwindcss": "^3.0.24",
     "typescript": "^4.7.2"
   }
 }
