--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "postcss": "^8.4.14",
     "prettier": "^2.6.2",
     "typescript": "^4.7.2"
+  },
+  "dependencies": {
+    "vuedraggable": "^4.1.0"
   }
 }
