--- a/.eslintrc
+++ b/.eslintrc
@@ -13,5 +13,6 @@
   "rules": {
     "vue/multi-word-component-names": "off",
     "vue/no-multiple-template-root": "off",
+    "import/no-named-as-default-member": "off"
   }
 }
