--- a/package.json
+++ b/package.json
@@ -21,7 +21,5 @@
     "prettier": "^2.6.2",
     "typescript": "^4.7.2"
   },
-  "dependencies": {
-    "vuedraggable": "^4.1.0"
-  }
+  "dependencies": {}
 }
