--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview"
+    "preview": "nuxt preview",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "devDependencies": {
     "@nuxt/postcss8": "^1.1.3",
@@ -20,6 +21,7 @@
     "nuxt": "3.0.0-rc.3",
     "postcss": "^8.4.14",
     "prettier": "^2.6.2",
+    "push-dir": "^0.4.1",
     "typescript": "^4.7.2"
   },
   "dependencies": {}
