--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
   "rules": {
     "vue/multi-word-component-names": "off",
     "vue/no-multiple-template-root": "off",
-    "import/no-named-as-default-member": "off"
+    "import/no-named-as-default-member": "off",
+    "import/no-mutable-exports": "off",
   }
 }
