refactor: tidy interfaces

--- a/.eslintrc
+++ b/.eslintrc
@@ -15,5 +15,6 @@
     "vue/no-multiple-template-root": "off",
     "import/no-named-as-default-member": "off",
     "import/no-mutable-exports": "off",
+    "no-use-before-define": "off"
   }
 }
