--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,7 @@
     "vue/no-multiple-template-root": "off",
     "import/no-named-as-default-member": "off",
     "import/no-mutable-exports": "off",
-    "no-use-before-define": "off"
+    "no-use-before-define": "off",
+    "prefer-const": "off"
   }
 }
