--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,14 @@
 {
   // https://v3.nuxtjs.org/concepts/typescript
   "extends": "./.nuxt/tsconfig.json",
-  "paths": {
-    "@": [
-      "."
-    ],
-    "@/*": [
-      "./*"
-    ]
-  }
+  "compilerOptions": {
+    "paths": {
+      "@": [
+        "."
+      ],
+      "@/*": [
+        "./*"
+      ]
+    }
+  },
 }
